--- a/package.json
+++ b/package.json
@@ -12,13 +12,15 @@
   "dependencies": {
     "@tanstack/react-query": "^5.90.8",
     "@tanstack/react-query-devtools": "^5.90.2",
-    "clsx": "^2.1.1",
+    "axios": "^1.13.2",
     "formik": "^2.4.9",
     "modern-normalize": "^3.0.1",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
     "react-paginate": "^8.3.0",
+    "react-spinners": "^0.17.0",
+    "use-debounce": "^10.0.6",
     "yup": "^1.7.1"
   },
   "devDependencies": {
